# yournote

./: .ai_session.md  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  DEPLOY_DOCKER.md  README.md  a1.py  b.py  docker-compose.yml  plan.md  plan1.md  plan2.md  plan3.md  pyproject.toml  rdata解释.md  run.bat  run.sh  stop.bat  stop.sh  test.py  test.txt  一键数据库迁移.bat  停止项目.bat  启动项目.bat
.sisyphus/plans/: pairing-partner-last-diary-and-user-credentials.md
backend/: .ai_session.md  Dockerfile  README.md  init_db.py  migrate_db.py  migrate_postgres_to_sqlite.py  migrate_sqlite_to_postgres.py  run.py  yournote.db
backend/app/: __init__.py  config.py  database.py  main.py  scheduler.py
backend/tests/: test_db_schema_bookmarked_at.py  test_detail_fetch_give_up_for_old_diary.py  test_diary_bookmarks.py  test_diary_query_has_msg.py  test_msg_count_increase.py  test_paired_relationship_state.py  test_postgres_distinct_orderby_regression.py  test_users_paired_include_inactive.py
frontend/: .ai_session.md  .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/src/: App.css  App.jsx  config.js  index.css
frontend/tests/: app.spec.js  diary-bookmarks.spec.js  diary-detail.spec.js  diary-reading.spec.js  diary-search.spec.js  messages.spec.js  msg-count.spec.js  paired-increase-history.spec.js  publish-autosave.spec.js  publish-history.spec.js  publish-time-convert.spec.js  testBase.js  users-pairing-status.spec.js
(+72 files in other folders)
